# brief

./: .gitignore  README.md  build-demo.sh  demo-gov.html  demo-gov.json  demo.html  demo.json  pyproject.toml  verapdf-diff.py
src/brief/: __init__.py  augment.py  cli.py  extract.py  judge.py  links.py  order.py  remediate.py  report.py
tests/: test_augment_helpers.py  test_judge_parse.py  test_links.py  test_order.py
