[project]
name = "brief"
version = "0.0.1"
description = "Judgment layer for PDF accessibility"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.0",
    "anthropic>=0.40",
    "click>=8.1",
]

[project.scripts]
brief = "brief.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brief"]
