[project]
name = "brief"
version = "0.0.1"
description = "Judgment layer for PDF accessibility"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docling>=2.0",
    "click>=8.1",
    "pythonproject",
]

[project.scripts]
brief = "brief.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brief"]

[tool.uv.sources]
pythonproject = { path = "/Users/umar/PycharmProjects/PythonProject", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
